--- a/about.html
+++ b/about.html
@@ -9,5 +9,8 @@
     <h1>About Us</h1>
     <p>Hi, I am About page</p>
      <p>Hi, I am About page 2</p>
+     <ul>
+        <li>Xyz</li>
+     </ul>
 </body>
 </html>
