--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 <body>
     <h1>About Us</h1>
     <p>Hi, I am About page</p>
-     <p>Hi, I am About page 2</p>
+     <p>Hi, I am About page </p>
 </body>
 </html>
