--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contact us</title>
 </head>
 <body>
     <h1>Contact us</h1>
     <p>We are Venom</p>
+    <Script src="script.js"></Script>
 </body>
 </html>
