--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,7 @@
     <h1>Contact us</h1>
     <p>We are Venom</p>
     <Script src="script.js"></Script>
+    <h2>Phone No</h2>
+    <h2>Details</h2>
 </body>
 </html>
